	strings (in ilSave, ilIsValid and ilGetString)
	* configure.ac, lib/Makefile.am: Added wbmp compilation support
	* il_jp2.c, il_wbmp.c: Fixed a typo that prevented compilation 
	* include/IL/devil_cpp_wrapper.hpp: Added a hopefully harmless solution for
	the initialization of DevIL.

2009-01-16 Denton woods <doomwiz@users.sf.net>
	* Updated x64 projects

2009-01-19 Denton woods <doomwiz@users.sf.net>
	* il_hdr.c: Changed line 73 to have space for terminating NULL.
	* src-IL/src/Makefile.am: Added il_vtf.c and *.cpp files.
	* Fixed the MSVC++ 9 solutions pointing to the MSVC++ 8 project files.
	* devil_cpp_wrapper.hpp: Updated to use ILconst_string instead of char*.
	* il.h: Changed definition of IL_ALPHA to match OpenGL's GL_ALPHA.
	* src-IL/include/Makefile.am: Added il_exr.h.
	* il_dds.c/il.h: Readded DXT extension code.
	* il_internal.h: Added declaration of ilFixCur.

2009-01-20 Denton woods <doomwiz@users.sf.net>
	* ilut_opengl.c (ilutGLScreen): Added glPixelStorei call.
	* Added il_iff.c from GAIA.
	* Added "x64 DLL Install.exe" to SVN.
	* il_internal.h: Renamed ilIsValidJpg* functions to ilIsValidJpeg*.  Added Iff functions.
	* il_io.c: Added checks for Iff-loading.
	* ilut_win32.c (ilutConvertSliceToHBitmap): Added better error handling.
	* src-IL/src/Makefile.am: Added il_iff.c.
	* ilu_rotate.c (iluRotate_): Changed ilResizeImage call.
	* ilut_win32.c (ilutConvertSliceToHBitmap): Redid using GAIA source changes.
	
2009-01-20 Matěj Týč <bubla@sf.net>
	* test/format_test: Added a program and script as 'make check' target.
	Those  will test whether IL is capable of saving and loading images and whether the saved and
	loaded image is similar to the original.
	* configure.ac, lib/Makefile.am: Added support to IFF compilation.
	* docs/DevIL_manual.texi: Added missing documentation about getting
	image data + fixed some typos.
	* include/IL/devil_cpp_wrapper.hpp: Fixed a typo that caused
	compilation error